 - Added VFS.GetArchiveContainingFile(string vfsFilePath) -> string archiveName
 - add a 6th return value (feature->reclaimTime) to GetFeatureResources.
 - Allow spawning of any CEG from any LUS:
   EmitSfx(p, "cegTag") param will emit the CEG with tag="cegTag"
   EmitSfx(p, SFX.GLOBAL | cegID) will emit the CEG with id=cegID
   Added Spring.GetCEGID("cegTag") to get CEG id from tag


AI:
 - reveal unit's captureProgress, buildProgress and paralyzeDamage params through
   skirmishAiCallback_Unit_get{CaptureProgress,BuildProgress,ParalyzeDamage} functions

Misc:
 - remove joystick support
 - detect hangs during filesystem initialisation
 - fix stale thread-id cache in watchdog after reload
 - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
 - account for raw search in AICallback::GetPathLength
 - use hidden window for offscreen context rendering
 - add /hang command
 - add /luagccontrol command
 - add /netping command
 - add /netmsgsmoothing command
 - add /distsortprojectiles command
 - add /{more,less}grass and /drawgrass commands
 - remove Basic{Sky,Water,TreeDrawer} (3DTrees is now always 1)
 - remove /DynamicSky command and keybinding
 - remove /{More,Less}Clouds commands
 - remove 3DTrees config-setting
 - remove /adv{map,model}shading commands
 - remove Adv{Map,Unit}Shading config-settings
 - remove ForceDisableShaders config-setting
 - remove Use{V,P}BO config-settings
 - remove LuaShaders config-setting
 - remove legacy InfoTexHandler
 - mandate GLSL support
 - throw out legacy load-screen code (replaced by LuaIntro)
 - change PitchAdjust config-setting from a boolean to an integer
   0 disables, 1 scales pitch by the square root of game speed, 2
   scales linearly with game speed
 - `/nocost` now accepts 0/1 parameter (still toggles if none given)
 - model metadata for assimp/obj can now define pieces hierarchy
   by either nested tables or 'parent' key.